# University

AI/A1/: main.py  vsimple.py
AI/A1/constants/: colors.py  directions.py
AI/A1/models/: DMap.py  Drone.py  Environment.py
AI/A1/ui/: DMapView.py  EnvironmentView.py
AI/A2/taks1/: main.py  sketch2.py  timer.py
AI/A2/task2/: cube.py
AI/A4/: constants.py  controller.py  domain.py  main.py  map.py  ui.py
AI/Assignment3/: controller.py  domain.py  gui.py  repository.py  test.map  ui.py  utils.py
AI/Assignment6/: k-means.py
AI/Assignment7/: createdb.py  inference.py  myNet.pt  myNetwork.pt  trainmodel.py
AI/Lab5/: main.py  solver.py
ASC/: asc tema.txt  tema1_1.asm  tema1_1.lst  tema_1_2.lst  tema_1_2_1.asm  tema_1_2_2.asm  tema_1_2_2.lst  tema_1_3_1.asm  tema_1_3_1.lst  tema_1_3_2.asm  tema_1_3_2.lst  tema_2_1_1.asm  tema_2_1_1.lst  tema_2_1_2.asm  tema_2_1_2.lst  tema_2_2_1.asm  tema_2_2_1.lst
Computer Networks/labs/lab1/: client  client.c  main  main.c
Computer Networks/labs/lab3/: client.py  server.py
Computer Networks/mid/: client.py  server.py
Computer Networks/practice/: client.py  server.py
Computer Networks/practice/lab1/: c1.py  c2.py  s1.py  s2.py
Computer Networks/practice/lab2/: client.py  server.py
Computer Networks/practice/lab3/: client.py
Computer Networks/practice/select/: client.py  server.py
DBMS/: deadlock.sql  deadlock_1.sql  practic.sql
DBMS/Lab1_2/UniversitiesManagementSystem/: Constants.cs  Program.cs  RelationshipDefinition.cs  RelationshipDefinition.xml  UniversitiesForm.Designer.cs  UniversitiesForm.cs  UniversitiesManagementSystem.sln  Utils.cs
DBMS/Lab3/: create_tables.sql  deadlock.sql  deadlock_2.sql  dirty_reads1.sql  dirty_reads2.sql  functions.sql  non-repeatable_reads1.sql  non-repeatable_reads2.sql  phantom_reads1.sql  phantom_reads2.sql  recover.sql  rollback.sql  snapshot1.sql  snapshot2.sql
FP/: fp.txt.txt
FP/files_test/: main.py  test.txt
ISS/api/: .gitignore  Api.sln  README.md
ISS/api/Api/: Api.csproj  Startup.cs  appsettings.json
ISS/api/Business/: Business.csproj
ISS/api/Data/: Data.csproj  DesignTimeDbContextFactory.cs  Program.cs  UMSDatabaseContext.cs
ISS/api/Infrastructure/: Infrastructure.csproj
ISS/web/: .gitignore  Dockerfile  nginx.conf
ISS/web-final/: package-lock.json  package.json
ISS/web-final/public/: index.html
ISS/web/src/: App.tsx  index.css  index.tsx
MAP/labs/count_semaphore/: gui.txt  output2.txt
MAP/labs/cyclic_barrier/: gui.txt
MAP/labs/exam/: gui.txt
MAP/labs/lab2/: gui.txt  output1.txt  output2.txt  output3.txt  output4.txt  output5.txt  output6.txt  output7.txt  output8.txt  output9.txt
MAP/labs/lock/: gui.txt
MAP/labs/main/: gui.txt  output7.txt
MAP/labs/procedures/: gui.txt  output9.txt
OS/ept/: 19.c  20.c  main
OS/exam/: a.txt  main  main.c
OS/practice/: date.txt  last.fake  main  main.c  main2.c  sed_grep_awk.sh  sed_grep_awk2.sh  sed_grep_awk3.sh  sed_grep_awk4.sh  test_c.swp
OS/practice/bash_scripting/: 1.1.sh  1.sh  15.sh  2.1.sh  2.sh  3.1.sh  3.sh  4.1.sh  5.sh  6.sh  7.sh  lu.sh
OS/practice/grep/: data.txt
OS/seminary/: main  p  p.c  s7.c  threads.c
OS/tpr/: 11  11.c  2  2.c  3  3.c  6  6.c  9  9.c
OS/tth/: 13  13.c  16  16.c
PLF/labs/: main.pl
PLF/labs/l1/: main.lisp
PLF/labs/lab1/: main.pl  main.py
PLF/labs/lab2/: main.pl
PLF/labs/lab3/: main.pl
PLF/labs/lisp/: main.fas  main.lib  main.lisp
PLF/labs/seminars/: test
PLF/seminars/: test
SQL/: DbTests.sql
WEB/A1/: index.html
WEB/A2/: circles.css  circles.html  squares.css  squares.html
WEB/A3/: index.html  main.css  main.js
WEB/A5/: index.html  main.css  main.js
WEB/A6/: index.html
WEB/A7/src/: index.html
WEB/A8/forum/: build.gradle  settings.gradle
WEB/A9/Guestbook/: Guestbook.sln
WEB/A9/frontend/: README.md  angular.json  karma.conf.js  package-lock.json  package.json
WEB/Exam/: .gitignore
WEB/Exam/java/: build.gradle
WEB/Exam/jsp/: build.gradle
WEB/exam sample/frontend/: package-lock.json  package.json
WEB/exam sample/java/: settings.gradle
oop-final/Lab/MoviesManagementService/: main.cpp  movies.txt  styles.css
oop-final/tests/: main.cpp
oop-final/tests/untitled/: CMakeLists.txt
oop/Lab/MoviesManagementService/: CMakeLists.txt  ceva.csv.csv  ceva.html  data.csv  data.html  watchlist.txt
oop/Lab/MoviesManagementService/builders/: FormatMovieBuilder.h  HTMLBuilder.h
oop/Lab/MoviesManagementService/console/: Console.cpp  Console.h  GuiApp.h
oop/Lab/MoviesManagementService/console/models/: MovieModel.cpp  MovieModel.h
oop/Lab/MoviesManagementService/console/views/: ChooseModeView.cpp  ChooseModeView.h
oop/Lab/MoviesManagementService/console/views/manager/: AddMovieTab.cpp  AddMovieTab.h  MainScreen.cpp  UpdateMovieTab.cpp  UpdateMovieTab.h  ViewMoviesTab.cpp
oop/Lab/MoviesManagementService/console/views/user/: PreviewWatchlistTab.cpp  SearchTab.cpp  SearchTab.h  ViewWatchlistTab.cpp  ViewWatchlistTab.h
oop/Lab/MoviesManagementService/ctml/: ctml.hpp
oop/Lab/MoviesManagementService/data-display/: HTMLDataDisplayHandler.h
oop/Lab/MoviesManagementService/domain/: Entity.cpp  Movie.cpp
oop/Lab/MoviesManagementService/exceptions/repository/: RepositoryException.h
oop/Lab/MoviesManagementService/file-handler/: MovieFileRW.h
oop/Lab/MoviesManagementService/repositories/: MoviesRepository.cpp
oop/Lab/MoviesManagementService/services/: IUndoRedoService.h  ManagerService.cpp  UndoRedoService.cpp  UndoRedoService.h  UserService.cpp
oop/Lab/MoviesManagementService/tests/: domain_tests.cpp  domain_tests.h  repository_tests.cpp  repository_tests.h  service_tests.cpp  service_tests.h  validators_tests.cpp  validators_tests.h
oop/Lab/MoviesManagementService/validators/: MovieValidator.cpp  MovieValidator.h
oop/Lab/TestQt/: CMakeLists.txt  main.cpp
oop/Lectures/: CMakeLists.txt  main.cpp
oop/Lectures/Lecture_10/genes/: main.cpp
oop/Lectures/Lecture_8/hello_world/: main.cpp
oop/tests/: main
oop/tests/JiraClone/: CMakeLists.txt  Observable.h  Subscriber.h  issues.txt  main.cpp  team.txt
(+587 files in other folders)
